# Embedded

./: CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/main/: CMakeLists.txt
apps/main/boot2/: ssi.h
apps/main/inc/: rp2040.hpp  rp2040_regs.hpp
apps/main/inc/experiments/: i2c.hpp  pio.hpp  pwm.hpp  stepper.hpp  uart.hpp
apps/main/src/: main.cpp
apps/main/src/experiments/: i2c.cpp  pio.cpp  pwm.cpp  stepper.cpp  uart.cpp
apps/main/src/pio/: blink.pio  ws2813.pio
apps/main/startup/: vtable.cpp
apps/main_lib/: CMakeLists.txt
apps/main_lib/src/: main.cpp
libs/: CMakeLists.txt
libs/bsp/rp2040/: CMakeLists.txt
libs/bsp/rp2040/inc/: rp2040.h  rp2040.hpp  rp2040_clock.hpp  rp2040_dma.hpp  rp2040_pins.hpp  rp2040_pwm.hpp  rp2040_regs.h  rp2040_regs.hpp  rp2040_spi.hpp  rp2040_uart.hpp
libs/bsp/rp2040/src/boot2/: boot2.cpp  generic_03h.s  pads_qspi.h
libs/bsp/rp2040/src/rp2040/: rp2040.cpp  rp2040_clock.cpp  rp2040_dma.cpp  rp2040_pins.cpp  rp2040_pwm.cpp  rp2040_regs.cpp  rp2040_spi.cpp  rp2040_uart.cpp
libs/drivers/: CMakeLists.txt
libs/drivers/inc/: ln298n.hpp
libs/drivers/src/: ln298n.cpp
libs/ecs/: CMakeLists.txt
libs/ecs/inc/: ecs.hpp
libs/hal/: CMakeLists.txt
libs/hal/inc/: clock.hpp  dma.hpp  hal.hpp  pins.hpp  pwm.hpp  spi.hpp  uart.hpp
libs/pico/inc/: rp2040_regs.h
libs/pico/inc/new/: regs.hpp  rp2040_regs.hpp
libs/pico/src/: startup.cpp
libs/pico/src/boot2/: exit_from_boot2.S  w25q080.s
libs/utilities/: CMakeLists.txt
libs/utilities/inc/utilities/: template.hpp
libs/xecs/: CMakeLists.txt
linker/: bootloader.ld  pico.ld  rp2040_old.ld
toolchains/: cortex-m0+.cmake
toolchains/common/: arm-none-eabi.cmake
tools/: CMakeLists.txt
tools/elf2uf2/: CMakeLists.txt
tools/elf2uf2/elf2ulf/: a.out  do.sh  elf.h.gch  main.cpp  uf2.h  uf2.h.gch
tools/elf2uf2/elf2ulf/main/: cmake_install.cmake  main.elf
tools/elf2uf2/elf2ulf/main/inc/pio/: ws2812.hpp
tools/elf2uf2/inc/: elf.h
